--- a/test/dummy/app/views/pages/index.html.erb
+++ b/test/dummy/app/views/pages/index.html.erb
@@ -10,6 +10,7 @@
 
 <%= render 'bootstrap_costumes/cards/tabbed_card', tabs: Page.top_pages %>
 
+<div data-controller="hello">Boo</div>
 
 <p id="notice"><%= notice %></p>
 
