--- a/app/views/bootstrap_costumes/alerts/_alert__danger.html.erb
+++ b/app/views/bootstrap_costumes/alerts/_alert__danger.html.erb
@@ -1,7 +1,7 @@
 <div class="alert bg-danger text-white" style="min-height: 55px;">
   <div class="row">
-    <div class="col" style="max-width: 55px">
-      <i class="fas fa-exclamation-circle fa-2x fa-fw"></i>
+    <div class="col fa-2x" style="max-width: 55px">
+      <%= icons__danger %>
     </div>
     <div class="col">
       <%= raw yield %>
