--- a/app/views/bootstrap_costumes/alerts/_alert__help.html.erb
+++ b/app/views/bootstrap_costumes/alerts/_alert__help.html.erb
@@ -1,7 +1,7 @@
 <div class="alert bg-primary text-white" style="min-height: 55px;">
   <div class="row">
-    <div class="col" style="max-width: 55px">
-      <i class="fas fa-question-circle fa-2x fa-fw float-left mr-3"></i>
+    <div class="col fa-2x" style="max-width: 55px">
+      <%= icons__help %>
     </div>
     <div class="col">
       <%= raw yield %>
