--- a/app/views/bootstrap_costumes/alerts/_alert__info.html.erb
+++ b/app/views/bootstrap_costumes/alerts/_alert__info.html.erb
@@ -1,7 +1,7 @@
 <div class="alert bg-info text-black" style="min-height: 55px;">
   <div class="row">
-    <div class="col" style="max-width: 55px">
-      <i class="fas fa-info-circle fa-2x fa-fw"></i>
+    <div class="col fa-2x" style="max-width: 55px">
+      <%= icons__info %>
     </div>
     <div class="col">
       <%= raw yield %>
