--- a/app/views/bootstrap_costumes/cards/_tabbed_card.html.erb
+++ b/app/views/bootstrap_costumes/cards/_tabbed_card.html.erb
@@ -11,7 +11,7 @@
       <% end %>
     <% end %>
 
-    <nav class="<%= options[:legacy] ? 'float-start' : 'float-start' %>">
+    <nav class="<%= options[:legacy] ? 'float-left' : 'float-start' %>">
       <ul class="nav nav-tabs card-header-tabs nav-pills" id="nav-tab" role="tablist">
         <% options[:breadcrumbs].each_with_index do |breadcrumb, index| %>
           <li class="nav-item" role="presentation">
