Removal of duplicate helper method.

--- a/app/views/bootstrap_costumes/cards/_tabbed_card.html.erb
+++ b/app/views/bootstrap_costumes/cards/_tabbed_card.html.erb
@@ -5,7 +5,7 @@
 
     <% if options[:links] %>
       <% options[:links].each do |link| %>
-        <div class="float-end">
+        <div class="<%= options[:legacy] ? 'float-right' : 'float-end' %>">
           <%= raw link[:path] %>
         </div>
       <% end %>
