--- a/app/views/bootstrap_costumes/cards/_tabbed_card.html.erb
+++ b/app/views/bootstrap_costumes/cards/_tabbed_card.html.erb
@@ -26,7 +26,7 @@
         <% tabs.each_with_index do |tab, index| %>
           <li class="nav-item" role="presentation">
             <button class="nav-link <%= 'active' if index == 0 %>"
-                    id="nav-<%= tab[:name].underscore %>-tab"
+                    id="nav-<%= tab[:id].underscore %>-tab"
                     data-<%= 'bs-' unless options[:legacy] %>toggle="tab"
                     data-<%= 'bs-' unless options[:legacy] %>target="#nav-<%= tab[:id] %>"
                     type="button"
