Removal of duplicate helper method.

--- a/lib/generators/bootstrap_costumes/templates/views/stimulus/filters/_filter_input.html.erb
+++ b/lib/generators/bootstrap_costumes/templates/views/stimulus/filters/_filter_input.html.erb
@@ -1,4 +1,4 @@
-<% options = {} if local_assigns[:options].nil? %>
+<%% options = {} if local_assigns[:options].nil? %>
 
 <div data-controller="filters"
      data-filters-url-value="<%= path %>"
