Removal of duplicate helper method.

--- a/lib/generators/bootstrap_costumes/templates/views/stimulus/filters/_filter_number_input.html.erb
+++ b/lib/generators/bootstrap_costumes/templates/views/stimulus/filters/_filter_number_input.html.erb
@@ -1,9 +1,9 @@
 <div data-controller="filters"
-     data-filters-url-value="<%= path %>"
-     data-filters-field-value="<%= value %>">
+     data-filters-url-value="<%%= path %>"
+     data-filters-field-value="<%%= value %>">
 
   <input type="number" data-filters-target="value"
          class="form-control form-control-sm"
          data-action="keyup->filters#inputChanged"
-         class="form-control" value="<%= current_user.filter(:value) %>">
+         class="form-control" value="<%%= current_user.filter(:value) %>">
 </div>
