Removal of duplicate helper method.

--- a/lib/generators/bootstrap_costumes/templates/views/stimulus/filters/_filter_input.html.erb
+++ b/lib/generators/bootstrap_costumes/templates/views/stimulus/filters/_filter_input.html.erb
@@ -10,5 +10,5 @@
          class="form-control form-control-sm"
          data-action="keyup->filters#inputChanged keyup->supertable#fadeContent"
          placeholder="<%%= options[:placeholder] %>"
-         class="form-control" value="<%%= current_user.filter(:value) %>">
+         class="form-control" value="<%%= current_user.filter(value) %>">
 </div>
