--- a/lib/generators/bootstrap_costumes/templates/views/stimulus/filters/_filter_radio.html.erb
+++ b/lib/generators/bootstrap_costumes/templates/views/stimulus/filters/_filter_radio.html.erb
@@ -1,4 +1,4 @@
-<!-- EDIT IN STIMULUS BASE 1.2.1 -->
+<%% options = {} if local_assigns[:options].nil? %>
 
 <%% if value %>
   <%%= link_to path_off, data: { controller: 'turbo', turbo_spin_value: 'true' },
