--- a/lib/generators/bootstrap_costumes/templates/views/_tabbed_card.html.erb
+++ b/lib/generators/bootstrap_costumes/templates/views/_tabbed_card.html.erb
@@ -25,7 +25,7 @@
       <ul class="nav nav-tabs card-header-tabs" id="nav-tab" role="tablist">
         <%% tabs.each_with_index do |tab, index| %>
           <li class="nav-item" role="presentation">
-            <button class="nav-link <%%= 'active' if index == 0 %>"
+            <button class="nav-link <%%= options[:active_tab] ? ('active' if tab[:id] == options[:active_tab]) : ('active' if index == 0 ) %>"
                     id="nav-<%%= tab[:id].underscore %>-tab"
                     data-<%%= 'bs-' unless options[:legacy] %>toggle="tab"
                     data-<%%= 'bs-' unless options[:legacy] %>target="#nav-<%%= tab[:id] %>"
@@ -43,7 +43,7 @@
   <div class="card-body">
     <div class="tab-content" id="nav-tabContent">
       <%% tabs.each_with_index do |tab, index| %>
-        <div class="tab-pane fade show <%%= 'active' if index == 0 %>"
+        <div class="tab-pane fade show <%%= options[:active_tab] ? ('active' if tab[:id] == options[:active_tab]) : ('active' if index == 0 ) %>"
              id="nav-<%%= tab[:id] %>" role="tabpanel" aria-labelledby="nav-home-tab">
           <%%= tab[:body] %>
         </div>
