--- a/lib/generators/bootstrap_costumes/templates/views/stimulus/filters/_filter_number_input.html.erb
+++ b/lib/generators/bootstrap_costumes/templates/views/stimulus/filters/_filter_number_input.html.erb
@@ -5,5 +5,5 @@
   <input type="number" data-filters-target="value"
          class="form-control form-control-sm"
          data-action="keyup->filters#inputChanged"
-         class="form-control" value="<%%= current_user.filter(:value) %>">
+         value="<%%= current_user.filter(:value) %>">
 </div>
