Removal of duplicate helper method.

--- a/lib/generators/bootstrap_costumes/templates/views/stimulus/filters/_filter_toggle.html.erb
+++ b/lib/generators/bootstrap_costumes/templates/views/stimulus/filters/_filter_toggle.html.erb
@@ -1,4 +1,4 @@
-<% options = {} if local_assigns[:options].nil? %>
+<%% options = {} if local_assigns[:options].nil? %>
 
 <%% if value %>
   <%%= link_to path_off, data: { controller: 'turbo', turbo_spin_value: 'true' },
