--- a/lib/generators/bootstrap_costumes/templates/views/stimulus/filters/_filter_checkbox.html.erb
+++ b/lib/generators/bootstrap_costumes/templates/views/stimulus/filters/_filter_checkbox.html.erb
@@ -5,13 +5,21 @@
               class: "btn btn-sm text-decoration-none #{options[:on_class]}",
               id: "#{options[:id]}" do %>
     <span data-turbo-target="spinner" hidden><%%= icons__spinner %> <%%= options[:label] %></span>
-    <span data-turbo-target="label"><%%= icons__radio_on %> <%%= options[:label] %></span>
+    <span data-turbo-target="label"><%%= icons__tick_box %> <%%= options[:label] %></span>
   <%% end %>
 <%% else %>
   <%%= link_to path_on, data: { controller: 'turbo', turbo_spin_value: 'true' },
               class: "btn btn-sm text-decoration-none #{options[:off_class]}",
               id: "#{options[:id]}" do %>
-    <span data-turbo-target="spinner" hidden><%%= icons__spinner %> <%%= options[:label] %></span>
-    <span data-turbo-target="label"><%%= icons__radio_off %> <%%= options[:label] %></span>
+    <span data-turbo-target="spinner" hidden><%%= icons__spinner %> <%= options[:label] %></span>
+    <span data-turbo-target="label"><%%= icons__square %> <%= options[:label] %></span>
   <%% end %>
 <%% end %>
+
+
+
+
+
+
+
+
