--- a/lib/generators/bootstrap_costumes/templates/views/stimulus/filters/_filter_input.html.erb
+++ b/lib/generators/bootstrap_costumes/templates/views/stimulus/filters/_filter_input.html.erb
@@ -11,7 +11,7 @@
          class="form-control form-control-sm"
          data-action="keyup->filters#inputChanged keyup->supertable#fadeContent"
          placeholder="<%%= options[:placeholder] %>"
-         class="form-control" value="<%%= current_user.filter(value) %>">
+         value="<%%= current_user.filter(value) %>">
 
   <div class="input-group-append">
     <button class="input-group-text"
